add workaround to make it run on JRE 17 and quell a JRE 11 warning
cf. https://stackoverflow.com/a/70965030/2171120

mid-term, this needs to move to Spring 5 or 6 even